# ftdmp

./: .gitignore  LICENSE.txt  README.markdown  README.md  ftdmp  ftdmp-all  ftdmp-all-diversify  ftdmp-all-dock  ftdmp-all-dock-cadscore-diversify  ftdmp-all-jury  ftdmp-all-score  ftdmp-build-complex  ftdmp-calc-global-voromqa-scores  ftdmp-calc-interface-cadscore-for-reference  ftdmp-calc-interface-cadscore-matrix  ftdmp-calc-interface-gnn-scores  ftdmp-calc-interface-voromqa-scores  ftdmp-calc-ranks-jury-scores  ftdmp-calc-redundancy-scores  ftdmp-check-hash  ftdmp-diversify-table-by-cadscore  ftdmp-dock  ftdmp-dock-symmetric  ftdmp-dock-two-monomers  ftdmp-dock-two-monomers-with-ftdock  ftdmp-dock-two-monomers-with-hex  ftdmp-extract-table-columns  ftdmp-filter-table  ftdmp-form-capri-answer  ftdmp-form-capri-answer.bash  ftdmp-form-casp15-assembly-answer  ftdmp-form-casp15-qa-answer  ftdmp-join-tables  ftdmp-jury  ftdmp-multiply-chains  ftdmp-plot-jury-diagnostics  ftdmp-plot-jury-scores  ftdmp-prepare-models-for-qa  ftdmp-prepare-monomer  ftdmp-print-usable-environment  (+11 more)
core/: build.bash  clean.bash
core/3D_Dock/: COPYRIGHT
core/3D_Dock/progs/: .gitignore  Makefile  Makefile.original.txt  angles.c  electrostatics.c  ftdock.c  grid.c  manipulate_structures.c  structures.h
core/3D_Dock/scripts/: PDB_Parse.pm  PDB_Types.pm  change-pdb-chain-id.perl  preprocess-pdb.perl
core/3D_Dock/tutorial/: 2kai.parsed  2pka.parsed  5pti.parsed  CHANGES
core/FASPR/: .gitignore  FASPR
core/fftw-2.1.3/: .gitignore  COPYRIGHT  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  acinclude.m4  aclocal.m4  config.cache  config.status  configure  configure.in  fftw.spec  libtool
core/fftw-2.1.3/FAQ/: fftw-faq.ascii  fftw-faq.bfnn  fftw-faq.info  fftw-faq.xrefdb
core/fftw-2.1.3/FAQ/fftw-faq.html/: index.html  section1.html  section2.html  section3.html  section4.html  section5.html
core/fftw-2.1.3/cilk/: Makefile  executor_cilk.cilk  fftw_cilk.cilkh  fftwnd_cilk.cilk  test_cilk.cilk  time_cilk.cilk
core/fftw-2.1.3/doc/: Makefile  Makefile.in  fftw.texi  version.texi
core/fftw-2.1.3/fftw/: Makefile  config.h  config.h.in  executor.c  fftw.h.in
core/fftw-2.1.3/fortran/: f77_test.F
core/fftw-2.1.3/gensrc/: Makefile.fftw.am  Makefile.rfftw.am  asched.ml  asched.mli  ast.ml  codelet_prelude  complex.ml  complex.mli  config_prelude  dag.ml  dag.mli  expr.ml  expr.mli  exprdag.ml  fft.ml  genfft.ml  magic.ml  number.ml  number.mli  rconfig_prelude  schedule.ml  schedule.mli  symmetry.ml  to_c.ml  to_c.mli  twiddle.ml  util.ml  util.mli  variable.ml  variable.mli
core/fftw-2.1.3/matlab/: fftw.c
core/fftw-2.1.3/mpi/: Makefile  Makefile.am  Makefile.in  README.f77  fftw_f77_mpi.c  fftw_f77_mpi.h  fftw_mpi_test.c  fftwnd_mpi.c  rfftw_f77_mpi.c  rfftw_mpi_test.c  test_sched.c  test_transpose_mpi.c  transpose_mpi.c
core/fftw-2.1.3/rfftw/: Makefile  Makefile.am  Makefile.in
core/fftw-2.1.3/tests/: Makefile  Makefile.am  Makefile.in  fftw_test.c  rfftw_test.c  test_main.c
core/fftw-2.1.3/threads/: Makefile  Makefile.am  Makefile.in  executor_threads.c  fftw_threads-int.h  fftw_threads.c  fftw_threads_test.c  rexec_threads.c  rfftw_threads_test.c
core/fftw-2.1.5/: .gitignore
core/voronota-iface-gnn_release/: voronota-iface-gnn-score
core/voronota-js_release/: VERSION.txt  voronota-js-fast-iface-voromqa  voronota-js-only-global-voromqa
core/voronota/expansion_js/: README.md  index.html  voronota-js-pdb-utensil-filter-atoms  voronota-js-pdb-utensil-rename-chains  voronota-js-voroif-gnn
core/voronota/src/: voronota_version.h
envs/: ftdmp_environment_for_conda.yml
support/: document.bash
test/: .gitignore  docking_table.txt  scoring_table.txt  workflow.bash  workflow.txt  workflow_scoring.txt
test/configs/: input_1b7f_redock.bash  input_1x9n_redock.bash  input_2bna_redock.bash  input_6v3p_redock.bash  input_capri188.bash  mode_protein_na.bash  mode_protein_protein.bash
test/docking_results/: .gitignore  all_parts_results_table.txt
test/on_full_from_gnn_nontraining_set/: .gitignore  run_in_predefined_mode.bash  run_in_predefined_mode_via_sbatch.bash
test/on_gnn_nontraining_set/: .gitignore  evaluate_all_summaries.bash  evaluate_summaries.bash  output.txt  run_in_all_predefined_modes.bash  run_in_predefined_mode.bash
test/on_gnn_nontraining_set/input/: pdb_ids.txt
test/on_gnn_nontraining_set/output_summaries_evaluation/: all__extended_for_protein_protein__1__1_30.txt  all__extended_for_protein_protein__1__3_30.txt  all__extended_for_protein_protein__3__1_30.txt  all__extended_for_protein_protein__3__3_30.txt  all__extended_for_protein_protein__5__1_30.txt  all__extended_for_protein_protein_no_sr__1__1_30.txt  all__extended_for_protein_protein_no_sr__1__3_30.txt  all__extended_for_protein_protein_no_sr__3__1_30.txt  all__extended_for_protein_protein_no_sr__3__3_30.txt  all__extended_for_protein_protein_no_sr__5__1_30.txt  all__extended_for_protein_protein_only_sr__1__1_30.txt  all__extended_for_protein_protein_only_sr__3__1_30.txt  all__extended_for_protein_protein_only_sr__5__1_30.txt  all__standard_for_protein_protein__1__1_30.txt  all__standard_for_protein_protein__1__3_30.txt  all__standard_for_protein_protein__3__1_30.txt  all__standard_for_protein_protein__3__3_30.txt  all__standard_for_protein_protein__5__1_30.txt  all__standard_for_protein_protein_no_sr__1__1_30.txt  all__standard_for_protein_protein_no_sr__1__3_30.txt  all__standard_for_protein_protein_no_sr__3__1_30.txt  all__standard_for_protein_protein_no_sr__3__3_30.txt  global_results.txt  (+4 more)
test/output/: docking_table.txt  jury_results.txt  ranks.txt  reference_check_table.txt  results_table.txt  scoring_table.txt  similarity_matrix.txt  top_sorted_joined_results_table.txt
tests/protein_na_docking/: run.bash
tests/protein_na_docking_alt/: plugin.bash  run.bash
tests/protein_na_docking_reusing_ftdock_results/: run.bash
tests/protein_protein_docking/: run.bash
tests/protein_protein_docking_alt/: custom_scoring_rank_names.txt  run.bash
tests/protein_pseudoligand_docking/: run.bash
(+3 files in other folders)
